--- a/sam-py/template.yaml
+++ b/sam-py/template.yaml
@@ -5,6 +5,11 @@ Description: >
 
   Test SAM Template for sam-py
 
+Parameters:
+  IdmzSubnetIds:
+    Type: AWS::SSM::Parameter::Value<List<String>>
+    Default: idmz-private-subnet-ids
+
 Resources:
   NotificationStateMachine:
     Type: AWS::Serverless::StateMachine
@@ -36,10 +41,8 @@ Resources:
         - SNSPublishMessagePolicy:
             TopicName: !GetAtt SnsTopic.TopicName
       VpcConfig:
-        SubnetIds:
-          - '{{resolve:ssm:idmz-private-subnet-a-id:1}}'
-          - '{{resolve:ssm:idmz-private-subnet-b-id:1}}'
-        SecurityGroupIds:
+        SubnetIds: !Ref IdmzSubnetIds
+        SecurityGroupIds: 
           - '{{resolve:ssm:idmz-notification-sg-id:1}}'
 
 Outputs:
